WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249321
REGRESSION (
256459@main
): data-type="number" is broken in libxslt
https://bugs.webkit.org/show_bug.cgi?id=249321
Summary
REGRESSION (256459@main): data-type="number" is broken in libxslt
David Kilzer (:ddkilzer)
Reported
2022-12-14 09:46:15 PST
`data-type="number"` is broken in libxslt. Just learned about this yesterday from the upstream libxml2/libxslt maintainer: ``` This should fix the thread-safety issue, but it breaks data-type="number" and commit c9788200 won't help with the new version of xsltICUSortFunction. ``` <
https://gitlab.gnome.org/GNOME/libxslt/-/issues/78#note_1616795
> Regressed with this fix:
Bug 247538
: Update xsltUnicodeSortFunction() <
https://bugs.webkit.org/show_bug.cgi?id=247538
> <
rdar://103360797
>
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2022-12-14 09:53:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7621
EWS
Comment 2
2022-12-14 10:44:31 PST
Committed
257866@main
(d62c575193bd): <
https://commits.webkit.org/257866@main
> Reviewed commits have been landed. Closing PR #7621 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug