Cherry-pick d62c575193bd. rdar://problem/103360797

REGRESSION (256459@main): data-type="number" is broken in libxslt
    https://bugs.webkit.org/show_bug.cgi?id=249321
    <rdar://103360797>

    Unreviewed revert of 256459@main.

    * Source/WebCore/xml/XSLTUnicodeSort.cpp:
    (WebCore::xsltUnicodeSortFunction):

    Canonical link: https://commits.webkit.org/257866@main

Canonical link: https://commits.webkit.org/252432.950@safari-7614-branch